<resources>
    <string name="app_name">Project Step 4 - COSC 341</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome!</string>
    <string name="brewery_name">Brewery Name</string>
    <string name="short_description_of_brewery">Short description of brewery...</string>
    <string name="sort_by">SORT BY</string>
    <string name="user_cover">User cover</string>
    <string name="user_icon">User Icon</string>
    <string-array name="breweryNames">
        <item>Kelowna Brewing Company</item>
        <item>Shoreline Brewing</item>
        <item>Red Bird Brewing</item>
        <item>Bad Tattoo Brewing</item>
        <item>Kelowna Beer Institute</item>
        <item>Vice and Virtue Brewing Co.</item>
    </string-array>
    <string-array name="my_array">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
    </string-array>
</resources>