<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="410sp"
        android:layout_height="60sp"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="serif"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <ImageView
        android:id="@+id/userProfile"
        android:layout_width="60sp"
        android:layout_height="50sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="75sp"
        android:contentDescription="@string/user_icon"
        android:background="@drawable/profileicon"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />
    <ImageView
        android:id="@+id/cover"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="72sp"
        android:contentDescription="@string/user_cover"
        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/cover2"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="74sp"
        android:contentDescription="@string/user_cover"
        android:background="@drawable/square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
        android:id="@+id/sort"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="280sp"
        android:layout_marginTop="130sp"
        android:fontFamily="serif"
        android:minHeight="48dp"
        android:contentDescription="@string/sort_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                app:defaultQueryHint="@string/search"
                android:layout_width="270sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="130sp"
                android:layout_marginStart="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ListView
                android:id="@+id/breweriesList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:divider="@color/claret"
                android:layout_marginTop="0sp"
                android:layout_marginStart="10sp"
                android:dividerHeight="4sp"
                android:listSelector="@color/gamboge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:smoothScrollbar="true"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>